2008-02-08  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/*.[ch]: Renamed several internal data structures
	and functions: ElementImpl -> ElementClass, LayoutNode -> Element.
	Remove more unnecessary casts.  Add function Ttk_ClientRegion,
	common factor of entry, scale, progress, and treeview widgets.

2008-02-06  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkImgPhInstance.c:	fix numerous leaks discovered with the
	* generic/tkMenu.c:		Mac OS X Instruments.app Leaks tool.
	* generic/tkText.c:
	* generic/tkTextImage.c:
	* generic/tkTextIndex.c:
	* generic/tkUndo.c:
	* generic/tkUtil.c:
	* generic/ttk/ttkFrame.c:
	* macosx/tkMacOSXWm.c:

2009-01-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvArc.c   - eliminate some unnessary type casts
	* generic/tkCanvBmap.c  - some internal const decorations
	* generic/tkCanvImg.c   - spacing
	* generic/tkCanvWind.c
	* generic/tkCmds.c
	* generic/tkConfig.c
	* generic/tkEntry.c
	* generic/tkFocus.c
	* generic/tkFont.c
	* generic/tkFrame.c
	* generic/tkGrab.c
	* generic/tkGrid.c
	* generic/tkImage.c
	* generic/tkListbox.c
	* generic/tkObj.c
	* generic/tkOption.c
	* generic/tkPack.c
	* generic/tkPanedWindow.c
	* generic/tkRectOval.c
	* generic/tkSelect.c
	* generic/tkText.c
	* generic/tkTextMark.c
	* generic/tkTextTag.c

2009-01-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkCache.c:  - eliminate some unnessary type casts
	* generic/ttk/ttkLayout.c  - some internal const decorations
	* generic/ttk/ttkState.c   - spacing
	* generic/ttk/ttkTheme.c
	* macosx/tkMacOSXMenu.c
	* macosx/tkMacOSXPrivate.h
	* unix/tkUnixFont.c
	* unix/tkUnixMenu.c
	* unix/tkUnixWm.c
	* win/tkWinColor.c
	* win/tkWinDialog.c
	* win/tkWinFont.c
	* win/tkWinMenu.c
	* win/tkWinSend.c
	* win/tkWinWindow.c
	* win/tkWinWM.c

2009-01-22  Kevin B. Kenny  <kennykb@acm.org>

	* unix/tcl.m4: Corrected a typo ($(SHLIB_VERSION) should be
	${SHLIB_VERSION}).
	* unix/configure: Autoconf 2.59
	